Working Flink Processor with Tests